using UnityEngine;

[CreateAssetMenu(menuName = "Sound/SoundID")]
public class SoundID : ScriptableObject{}
